--- a/custom-vscode.css
+++ b/custom-vscode.css
@@ -55,9 +55,9 @@
 /* File Explorer Item Label */
 .monaco-tree .monaco-tree-row .label-name,
 .monaco-list .monaco-list-row .monaco-icon-label .label-name {
-    font-family: "Geist Mono", monospace !important;
-    font-size: 14px !important;
-    font-weight: 400 !important;
+    font-family: "Dank Mono" !important;
+    font-size: 20px !important;
+    font-weight: "400";
     color: #fff !important;
 }
 
@@ -105,12 +105,12 @@
 /* Tooltip box style */
 .monaco-editor-hover,
 .monaco-hover {
-    box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.45) !important;
-    padding: 10px !important;
-    background-image: linear-gradient(#3c3c50 0%, #2a2b38 100%) !important;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.45) !important;
+    padding: 5px !important;
+    background-image: linear-gradient(#2222 0%, #3333 100%) !important;
     backdrop-filter: blur(3px) !important;
-    border-radius: 20px !important;
-    border: none !important;
+    border-radius: 5px !important;
+    border: 1px solid #cccc !important;
 }
 
 /* Project title's style at the top. */
@@ -163,10 +163,13 @@
     transform: translateY(-50%) !important;
     top: 50% !important;
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.45) !important;
-    padding: 10px 10px 18px 10px !important;
-    background-image: linear-gradient(#3c3c50 0%, #2a2b38 100%) !important;
+    padding: 5px 5px 10px 5px !important;
+    background-image: linear-gradient(#2222 0%, #3333 100%) !important;
     backdrop-filter: blur(3px) !important;
-    border-radius: 20px !important;
+    border-radius: 5px !important;
+    border: 1px solid #cccc !important;
+    font-size: 13px;
+    font-family: "Ubuntu", monospace !important;
 }
 
 /* Remove background for lists */
